--- a/templates/commande/index.html.twig
+++ b/templates/commande/index.html.twig
@@ -10,6 +10,7 @@
             <tr>
                 <th>Id</th>
                 <th>Numcom</th>
+                <th>Produit</th>
                 <th>Date</th>
                 <th>Tht</th>
                 <th>Ttva</th>
@@ -22,6 +23,7 @@
             <tr>
                 <td>{{ commande.id }}</td>
                 <td>{{ commande.numcom }}</td>
+                <td>{{ commande.produit }}</td>
                 <td>{{ commande.date ? commande.date|date('Y-m-d') : '' }}</td>
                 <td>{{ commande.tht }}</td>
                 <td>{{ commande.ttva }}</td>
