--- a/templates/client/show.html.twig
+++ b/templates/client/show.html.twig
@@ -12,44 +12,28 @@
                 <td>{{ client.id }}</td>
             </tr>
             <tr>
-                <th>Designation</th>
-                <td>{{ client.designation }}</td>
+                <th>Nom Entreprise</th>
+                <td>{{ client.NomEntreprise }}</td>
             </tr>
             <tr>
-                <th>RespComm</th>
-                <td>{{ client.RespComm }}</td>
+                <th>Responsable</th>
+                <td>{{ client.Responsable }}</td>
             </tr>
             <tr>
-                <th>RespFinan</th>
-                <td>{{ client.respFinan }}</td>
+                <th>Adresse de Livraison</th>
+                <td>{{ client.AdressedeLivraison  }}</td>
             </tr>
             <tr>
-                <th>AdrLiv</th>
-                <td>{{ client.adrLiv }}</td>
+                <th>Adresse de Facturation</th>
+                <td>{{ client.AdressedeFacturation }}</td>
             </tr>
             <tr>
-                <th>AdrFacture</th>
-                <td>{{ client.adrFacture }}</td>
-            </tr>
-            <tr>
-                <th>Tel</th>
-                <td>{{ client.tel }}</td>
-            </tr>
-            <tr>
-                <th>Portable</th>
-                <td>{{ client.portable }}</td>
+                <th>Telephone</th>
+                <td>{{ client.Telephone }}</td>
             </tr>
             <tr>
                 <th>Email</th>
-                <td>{{ client.email }}</td>
-            </tr>
-            <tr>
-                <th>SoldeInit</th>
-                <td>{{ client.soldeInit }}</td>
-            </tr>
-            <tr>
-                <th>Solde</th>
-                <td>{{ client.solde }}</td>
+                <td>{{ client.Email }}</td>
             </tr>
         </tbody>
     </table>
