--- a/templates/commande/show.html.twig
+++ b/templates/commande/show.html.twig
@@ -16,6 +16,10 @@
                 <td>{{ commande.numcom }}</td>
             </tr>
             <tr>
+                <th>Produit</th>
+                <td>{{ commande.Produit }}</td>
+            </tr>
+            <tr>
                 <th>Date</th>
                 <td>{{ commande.date ? commande.date|date('Y-m-d') : '' }}</td>
             </tr>
