--- a/templates/produit/show.html.twig
+++ b/templates/produit/show.html.twig
@@ -15,6 +15,10 @@
                 <th>Libelle</th>
                 <td>{{ produit.libelle }}</td>
             </tr>
+             <tr>
+                <th>Image</th>
+                <td><img src="{{asset('images/post/')}}{{ post.image }}" style="width:75px;max-height:75px;"></td>
+            </tr>
             <tr>
                 <th>Pa</th>
                 <td>{{ produit.pa }}</td>
