--- a/templates/produit/show.html.twig
+++ b/templates/produit/show.html.twig
@@ -17,7 +17,7 @@
             </tr>
              <tr>
                 <th>Image</th>
-                <td><img src="{{asset('images/post/')}}{{ post.image }}" style="width:75px;max-height:75px;"></td>
+                <td><img src="{{asset('images/post/')}}{{ produit.image }}" style="width:75px;max-height:75px;"></td>
             </tr>
             <tr>
                 <th>Pa</th>
