--- a/templates/avis/index.html.twig
+++ b/templates/avis/index.html.twig
@@ -9,7 +9,7 @@
         <thead>
             <tr>
                 <th>Id</th>
-                <th>Commentaire</th>
+                <th>Commentaires</th>
                 <th>User</th>
                 <th>Date</th>
                 <th>actions</th>
