--- a/templates/security/registration.html.twig
+++ b/templates/security/registration.html.twig
@@ -2,12 +2,13 @@
 
 {% block body %}
 
-<h1>bonjours a tous ! </h1>
+<h1>Bonjours a tous ! </h1>
 
 {{ form_start(form) }}
 {{ form_row(form.entreprise, {'label': 'Nom de l\'entreprise','attr': {'placeholder': 'Nom de l\'entreprise ...'}})}}
 {{ form_row(form.email, {'label': 'Adresse Email','attr': {'placeholder': 'Adresse email ...'}})}}
-{{ form_row(form.password, {'label': 'Mot De Passe','attr': {'placeholder': 'mot de passe'}})}}
+{{ form_row(form.password, {'label': 'Mot de passe','attr': {'placeholder': 'mot de passe'}})}}
+{{ form_row(form.confirm_password, {'label': 'Confirmer le mot de passe','attr': {'placeholder': 'Répéter le mot de passe'}})}}
 
 <button type="submit" class="btn btn-success">Inscription</button>
 {{ form_end(form) }}
