--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -1,20 +1,24 @@
-{% extends 'base.html.twig' %}
 
-{% block title %}Hello HomepageController!{% endblock %}
+{% include "header.html.twig"%}
+
+{% block title %}{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/xampp/htdocs/Green_Force/src/Controller/HomepageController.php'|file_link(0) }}">src/Controller/HomepageController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/xampp/htdocs/Green_Force/templates/homepage/index.html.twig'|file_link(0) }}">templates/homepage/index.html.twig</a></code></li>
-    </ul>
+<div class="container-fluid">
+   <div class="row justify-content-md-center">
+       <div class="col-md-12 herd row justify-content-center"><div class="col-md-3 title"></div>
+    </div>
 </div>
+
+<section>
+<div class="container-fluid">
+    <div class="row col-md-12 justify-content-center gen">
+    <div class="col-md-8 gen">
+    <h1>index</h1>
+
+
+</div>   
+    </div>   
+    </div>
 {% endblock %}
+{% include "footer.html.twig"%}
