--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -3,9 +3,9 @@
     <div class="row justify-content-md-center">
         <div class="col-md-3 fat1">
             <p><h3>Nos conditions</h3></p><br>
-           <a href="conditions.php" class="dln"><p>CONDITIONS GENERALES DE VENTE</p></a>
-           <a href="politique.php" class="dln"><p>POLITIQUE DE CONFIDENTIALITE</p></a>
-           <a href="mention.php" class="dln"><p>MENTIONS LEGALES</p></a>
+           <a href="{{ path('conditions')}}" class="dln"><p>CONDITIONS GENERALES DE VENTE</p></a>
+           <a href="{{ path('politique')}}" class="dln"><p>POLITIQUE DE CONFIDENTIALITE</p></a>
+           <a href="{{ path('mention')}}" class="dln"><p>MENTIONS LEGALES</p></a>
         </div>
         <div class="col-md-3 fat2">
             <p><h3>Paiement sécurisé</h3></p>
