--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -43,7 +43,7 @@ $(bouton1).mouseleave(function(){
         
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <nav class="navbar navbar-light bg-light">
-  <a class="navbar-brand" href="index.php">
+  <a class="navbar-brand" href="/Green_Force/public/index.php">
     <img src="{{asset('img/logo/logo.png')}}" width="100" height="80" class="d-inline-block align-top" alt="">
     
   </a>
@@ -82,3 +82,5 @@ $(bouton1).mouseleave(function(){
 </div>
 </div>
     </header>
+    {% block body %}
+    {% endblock %}
