--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -64,7 +64,7 @@ $(bouton1).mouseleave(function(){
         <a class="nav-link " href="equipements.php" id="btn3">Equipements</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " href="propos.php" id="btn4">A propos</a>
+        <a class="nav-link " href="{{ path('propos')}}" id="btn4">A propos</a>
       </li>
       <li class="nav-item">
         <a class="nav-link " href="contact.php" id="btn5">Contact</a>
