--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -9,10 +9,10 @@
             <input placeholder="Adresse email ..." required name="_username" type="text" class="form-control">
         </div>
         <div class="form-group">
-            <input placeholder="Mot de passe ..." required name="_password" type="text" class="form-control">
+            <input placeholder="Mot de passe ..." required name="_password" type="password" class="form-control">
         </div>
         <div class="form-group">
-            <button type="submit" class="btn btn-succss">Connexion !<button>
+            <button type="submit" class="btn btn-success">Connexion !<button>
         </div>
     </form>
 
