--- a/templates/contact/contact.html.twig
+++ b/templates/contact/contact.html.twig
@@ -22,7 +22,7 @@
             </div>
 
             <div class="form-group">
-                <button type="submit" class="btn btn-succss">Envoyer le message<button>
+                <button type="submit" class="btn btn-success">Envoyer le message</button>
             </div>
         </form>
     </div>
