--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,6 +9,12 @@
     </head>
     <body>
         <div class="container">
+            <button>
+                <a href="{{ path('security_login') }}">Connexion !</a>
+            </button>
+            <button>
+                <a href="{{ path('security_logout') }}">Deconnexion !</a>
+            </button>
             {% block body %}{% endblock %}
         </div>
         {% block javascripts %}{% endblock %}
