--- a/templates/contact/contact.html.twig
+++ b/templates/contact/contact.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<h1> Nous contacter en cas de besoin </h1>
+<h1 style="text-align: center"> Nous contacter en cas de besoin </h1>
 
     <div class="container">
 
@@ -18,7 +18,7 @@
                 <input placeholder="Votre Sujet ..." required name="_topic" type="text" class="form-control">
             </div>
             <div class="form-group">
-                <input placeholder="Votre Message !" required name="_description" type="text" class="form-control">
+                <input placeholder="Votre Message !" required name="_description" type="text" class="form-control" style="height:190px;">
             </div>
 
             <div class="form-group">
