--- a/templates/entretien/_delete_form.html.twig
+++ b/templates/entretien/_delete_form.html.twig
@@ -1,5 +1,5 @@
-<form method="post" action="{{ path('entretien_delete', {'id': entretien.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('entretien_delete', {'id': entretien.id}) }}" onsubmit="return confirm('Etes-vous sûre de vouloir supprimer cet article?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ entretien.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn">Supprimer</button>
 </form>
