--- a/templates/entretien/edit.html.twig
+++ b/templates/entretien/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Entretien{% endblock %}
+{% block title %}Modifier Equipements{% endblock %}
 
 {% block body %}
-    <h1>Edit Entretien</h1>
+    <h1>Modifier Equipements</h1>
 
-    {{ include('entretien/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('entretien/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
 
-    <a href="{{ path('entretien_index') }}">back to list</a>
+    <a href="{{ path('entretien_index') }}">revenir à la liste</a>
 
     {{ include('entretien/_delete_form.html.twig') }}
 {% endblock %}
