--- a/templates/entretien/new.html.twig
+++ b/templates/entretien/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Entretien{% endblock %}
+{% block title %}Créer un article{% endblock %}
 
 {% block body %}
-    <h1>Create new Entretien</h1>
+    <h1>Créer un article</h1>
 
     {{ include('entretien/_form.html.twig') }}
 
-    <a href="{{ path('entretien_index') }}">back to list</a>
+    <a href="{{ path('entretien_index') }}">revenir à la liste</a>
 {% endblock %}
