--- a/templates/papeterie/index.html.twig
+++ b/templates/papeterie/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Papeterie index{% endblock %}
+{% block title %}Papeterie{% endblock %}
 
 {% block body %}
-    <h1>Papeterie index</h1>
+    <h1>Papeterie</h1>
 
     <table class="table">
         <thead>
@@ -33,17 +33,17 @@
                 <td>{{ papeterie.Stock }}</td>
 
                 <td>
-                    <a href="{{ path('papeterie_show', {'id': papeterie.id}) }}">show</a>
-                    <a href="{{ path('papeterie_edit', {'id': papeterie.id}) }}">edit</a>
+                    <a href="{{ path('papeterie_show', {'id': papeterie.id}) }}">Voir</a>
+                    <a href="{{ path('papeterie_edit', {'id': papeterie.id}) }}">Modifier</a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="9">no records found</td>
+                <td colspan="9">Pas d'articles pour le moment</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-    <a href="{{ path('papeterie_new') }}">Create new</a>
+    <a href="{{ path('papeterie_new') }}">Créer un nouveau article</a>
 {% endblock %}
