--- a/templates/papeterie/new.html.twig
+++ b/templates/papeterie/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Papeterie{% endblock %}
+{% block title %}Créer un nouveau article{% endblock %}
 
 {% block body %}
-    <h1>Create new Papeterie</h1>
+    <h1>Créer un nouveau article</h1>
 
     {{ include('papeterie/_form.html.twig') }}
 
-    <a href="{{ path('papeterie_index') }}">back to list</a>
+    <a href="{{ path('papeterie_index') }}">revenir à la liste</a>
 {% endblock %}
