--- a/templates/papeterie/show.html.twig
+++ b/templates/papeterie/show.html.twig
@@ -42,9 +42,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('papeterie_index') }}">back to list</a>
+    <a href="{{ path('papeterie_index') }}">revenir à la liste</a>
 
-    <a href="{{ path('papeterie_edit', {'id': papeterie.id}) }}">edit</a>
+    <a href="{{ path('papeterie_edit', {'id': papeterie.id}) }}">modifier</a>
 
     {{ include('papeterie/_delete_form.html.twig') }}
 {% endblock %}
