--- a/templates/produit/edit.html.twig
+++ b/templates/produit/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Produit{% endblock %}
+{% block title %}Modifier l'article{% endblock %}
 
 {% block body %}
-    <h1>Edit Produit</h1>
+    <h1></h1>
 
-    {{ include('produit/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('produit/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
 
-    <a href="{{ path('produit_index') }}">back to list</a>
+    <a href="{{ path('produit_index') }}">Revenir à la liste</a>
 
     {{ include('produit/_delete_form.html.twig') }}
 {% endblock %}
