--- a/templates/produit/index.html.twig
+++ b/templates/produit/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Produit index{% endblock %}
+{% block title %}Produits d'entretien{% endblock %}
 
 {% block body %}
-    <h1>Produit index</h1>
+    <h1>Produits d'entretien</h1>
 
     <table class="table">
         <thead>
@@ -32,17 +32,17 @@
                 <td>{{ produit.stock }}</td>
                 
                 <td>
-                    <a href="{{ path('produit_show', {'id': produit.id}) }}">show</a>
-                    <a href="{{ path('produit_edit', {'id': produit.id}) }}">edit</a>
+                    <a href="{{ path('produit_show', {'id': produit.id}) }}">Voir</a>
+                    <a href="{{ path('produit_edit', {'id': produit.id}) }}">Modifier</a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="8">no records found</td>
+                <td colspan="8">Pas d'articles pour le moment</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-    <a href="{{ path('produit_new') }}">Create new</a>
+    <a href="{{ path('produit_new') }}">Créer un nouveau article</a>
 {% endblock %}
