--- a/templates/produit/show.html.twig
+++ b/templates/produit/show.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Produit{% endblock %}
+{% block title %}Produits d'entretien{% endblock %}
 
 {% block body %}
-    <h1>Produit</h1>
+    <h1>Produits d'entretien</h1>
 
     <table class="table">
         <tbody>
@@ -42,9 +42,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('produit_index') }}">back to list</a>
+    <a href="{{ path('produit_index') }}">revenir à la liste</a>
 
-    <a href="{{ path('produit_edit', {'id': produit.id}) }}">edit</a>
+    <a href="{{ path('produit_edit', {'id': produit.id}) }}">modifier</a>
 
     {{ include('produit/_delete_form.html.twig') }}
 {% endblock %}
