--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -1,24 +1,1 @@
-
-{% include "header.html.twig"%}
-
-{% block title %}{% endblock %}
-
-{% block body %}
-<div class="container-fluid">
-   <div class="row justify-content-md-center">
-       <div class="col-md-12 herd row justify-content-center"><div class="col-md-3 title"></div>
-    </div>
-</div>
-
-<section>
-<div class="container-fluid">
-    <div class="row col-md-12 justify-content-center gen">
-    <div class="col-md-8 gen">
-    <h1>index</h1>
-
-
-</div>   
-    </div>   
-    </div>
-{% endblock %}
-{% include "footer.html.twig"%}
+{% extends 'base.html.twig' %}
