--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <head> 
+     
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" 
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+         {# <link rel="stylesheet" href="https://bootswatch.com/4/sketchy/bootstrap.min.css"> #}
         {% block stylesheets %}{% endblock %}
     </head>
+    
     <body>
     
         {% for flash in app.session.flashBag.get('notice') %}
@@ -14,8 +17,96 @@
                 {{ flash }}
             </div>
         {% endfor %}
+     
+ {% include "header.html.twig"%}
 
-        {% block body %}{% endblock %}
+  {# <nav class="navbar navbar-expand-lg navbar-dark bg-info">
+            <a class="navbar-brand" href="{{path('homepage')}}">Green Force</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            
+            <div class="collapse navbar-collapse" id="navbarColor04">
+                <ul class="navbar-nav mr-auto">
+                   <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="{{path('homepage')}}" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                           Accueil
+                        </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="nav-link bg-dark" href="{{path('homepage')}}">Home Page</span></a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="nav-link dropdown-toggle bg-dark" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    administration
+                                </a>
+                           
+                                        <a class="dropdown-item " href="{{path('admin')}}">administration Equipements</a>
+                                        <div class="dropdown-divider"></div>
+                                        <a class="dropdown-item " href="{{path('adpapeterie')}}">administration Papeteries</a>
+                                        <div class="dropdown-divider"></div>
+                                        <a class="dropdown-item " href="{{path('adentretien')}}">administration Produits Entretiens</a>
+                                        <div class="dropdown-divider"></div>
+                                        <a class="dropdown-item" href="{{path('commande_index')}}">Gestion de commande</a>
+                             </div>
+                    </li>
+
+                  
+                    <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="{{path('homepage')}}" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                           Nos Produits
+                        </a>
+                        <a class="dropdown-item" href="{{path('bureaux')}}">Equipements</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Papeterie</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item"href="{{path('entretiens')}}">Produits Entretien</a>
+                    </li>
+                    
+                    <li class="nav-item">
+                         
+                            <a class="nav-link dropdown-toggle bg-dark" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Compte Client
+                        </a>
+                           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                        <a class="dropdown-item " href="{{path('commande_index')}}">Commande Client</a>
+                                        <div class="dropdown-divider"></div>
+                                        <a class="dropdown-item " href="{{path('client_index')}}">Gestion Client</a>
+                                        <div class="dropdown-divider"></div>
+                                        <a class="dropdown-item " href="{{path('avis_index')}}">Avis Client</a>
+                                        
+                        </div>
+                    </li>
+                  
+                 
+                </ul>
+            </div>
+        </nav> #}
+
+        <div class="container-fluid">
+        <div class="row justify-content-md-center">
+            <div class="col-md-12 herd row justify-content-center"><div class="col-md-3 title"></div>
+            </div>
+        </div>
+
+      
+
+
+        </div>   
+            </div>   
+            </div>
+
+
+
+        
+        <div class="container">
+            <h1 class="">{% block monTitre %}{% endblock %}</h1>
+            {% block body %}{% endblock %}
+        </div>
+       
         {% block javascripts %}{% endblock %}
+        
+         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     </body>
+    {% include "footer.html.twig"%}
 </html>
