--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -48,20 +48,20 @@ $(bouton1).mouseleave(function(){
     
   </a>
 </nav>
-  <a class="navbar-brand " href="#"></a>
+  <a class="navbar-brand " href="{{path('homepage')}}"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse taille" id="navbarNav">
     <ul class="navbar-nav ">
       <li class="nav-item ">
-        <a class="nav-link " href="papeterie.php" id="btn1">Papeterie<span class="sr-only">(current)</span></a>
+        <a class="nav-link " href="{{path('papeterie_index')}}" id="btn1">Papeterie<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " href="entretien.php" id="btn2">Produits d'entretien</a>
+        <a class="nav-link " href="{{path('entretiens')}}" id="btn2">Produits d'entretien</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " href="equipements.php" id="btn3">Equipements</a>
+        <a class="nav-link " href="{{path('bureaux')}}" id="btn3">Equipements</a>
       </li>
       <li class="nav-item">
         <a class="nav-link " href="{{ path('propos')}}" id="btn4">A propos</a>
