--- a/templates/homepage/propos.html.twig
+++ b/templates/homepage/propos.html.twig
@@ -10,7 +10,9 @@
 <div class="container-fluid">
     <div class="row col-md-12 justify-content-center gen">
     <div class="col-md-8 gen">
-    <p class="textf"> <img src="img/logo.png" alt=""> <br>
+    <br> <h1>A propos</h1>
+    <p class="textf"> <img src="{{asset ('img/logo.png')}}" alt=""> 
+   
    A propos de notre société :
  <strong> La Force Verte@ </strong>est une entreprise créée en 2005, de moins de 50 salariés. <br> Elle est le leader européens de la fourniture de bureau, des produits d’entretiens ainsi que l’aménagement de vos bureaux, accès sur le développement durable et le recyclage des déchets occasionnés. 
  <strong> La Force Verte@ </strong>s’efforce de diminuer son impact environnemental, alors nous avons pris conscience que notre site e-commerce devait lui aussi respecter notre charte de qualité. <br> 
@@ -20,7 +22,8 @@ Pour limiter les retours, nous avons optimiser nos fiches produits pour vous off
 <strong>La Force Verte@</strong> a créée  son site Green_Force, parce ce qu’il reste une alternative plus écologique que le commerce physique puisque les émissions de CO2 sont tout de même divisé par quatre.
 La conscience écologique de Green_ Force a encore du chemin à parcourir, mais mettre ces pratiques en place a permis de créer un e-commerce éco-responsable et d’apporter notre pierre à l’édifice. <br>
 <strong> La Force Verte@ </strong>est une entreprise créée en 2005, de moins de 50 salariés. Et qui génère un CA de de 8500000€. Nous nous efforçons à ce que nos fournisseurs respect notre charte de qualité concernant l’environnement. <br> Et donc nous distribuons pour les entreprises de bureaux des produits recyclés et recyclable, pour toutes fournitures de papeteries, produits d’entretiens et de l’aménagement.
-</p> 
+</p>
+</p>
     </div>
     </div>
 </div>
