--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -14,7 +14,8 @@
 <div class="container-fluid">
     <div class="row col-md-12 justify-content-center gen">
     <div class="col-md-8 gen">
-    <h1>index</h1>
+    
+    <br><h1>index</h1>
 
 
 </div>   
