--- a/templates/papeterie/index.html.twig
+++ b/templates/papeterie/index.html.twig
@@ -1,9 +1,19 @@
-{% extends 'base.html.twig' %}
+{% include "header.html.twig"%}
 
-{% block title %}Papeterie index{% endblock %}
+{% block title %}{% endblock %}
 
 {% block body %}
-    <h1>Papeterie index</h1>
+<div class="container-fluid">
+   <div class="row justify-content-md-center">
+       <div class="col-md-12 papt row justify-content-center"><div class="col-md-3 title"></div>
+    </div>
+</div>
+
+<section>
+<div class="container-fluid">
+    <div class="row col-md-12 justify-content-center gen">
+    <div class="col-md-8 gen">
+   <br> <h1>Papeterie</h1>
 
     <table class="table">
         <thead>
@@ -47,3 +57,9 @@
 
     <a href="{{ path('papeterie_new') }}">Create new</a>
 {% endblock %}
+ </div>
+    </div>
+</div>
+
+</section>
+{% include "footer.html.twig"%}
