--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -75,7 +75,7 @@ $('#navigation').removeClass("fixNavigation");
   <div class="collapse navbar-collapse taille" id="navbarNav">
     <ul class="navbar-nav ">
       <li class="nav-item ">
-        <a class="nav-link " href="{{ path('papeterie')}}" id="btn1">Papeterie<span class="sr-only">(current)</span></a>
+        <a class="nav-link " href="{{ path('papeterie_index')}}" id="btn1">Papeterie<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link " href="entretien.php" id="btn2">Produits d'entretien</a>
@@ -90,7 +90,7 @@ $('#navigation').removeClass("fixNavigation");
         <a class="nav-link " href="contact.php" id="btn5">Contact</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " href="{{ path('avis')}}" id="btn5">avis</a>
+        <a class="nav-link " href="{{ path('avis_index')}}" id="btn5">avis</a>
       </li>
       
       </li>
