--- a/templates/avis/index.html.twig
+++ b/templates/avis/index.html.twig
@@ -31,18 +31,18 @@
                 <td>{{ avi.User }}</td>
                 <td>{{ avi.Date ? avi.Date|date('Y-m-d H:i:s') : '' }}</td>
                 <td>
-                    <a href="{{ path('avis_show', {'id': avi.id}) }}">show</a>
-                    <a href="{{ path('avis_edit', {'id': avi.id}) }}">edit</a>
+                    <a href="{{ path('avis_show', {'id': avi.id}) }}">Voir</a>
+                    <a href="{{ path('avis_edit', {'id': avi.id}) }}">Modifier</a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="5">no records found</td>
+                <td colspan="5">Pas d'avis pour le moment</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
-    <a href="{{ path('avis_new') }}">Create new</a>
+    <a href="{{ path('avis_new') }}">Créer un nouveau</a>
  </div>
     </div>
 </div>
