--- a/templates/avis/new.html.twig
+++ b/templates/avis/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Avis{% endblock %}
+{% block title %}Nouveau commentaire{% endblock %}
 
 {% block body %}
-    <h1>Create new Avis</h1>
+    <h1>Créer un nouveau commentaire</h1>
 
     {{ include('avis/_form.html.twig') }}
 
-    <a href="{{ path('avis_index') }}">back to list</a>
+    <a href="{{ path('avis_index') }}">revenir à la liste</a>
 {% endblock %}
