--- a/templates/avis/show.html.twig
+++ b/templates/avis/show.html.twig
@@ -26,9 +26,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('avis_index') }}">back to list</a>
+    <a href="{{ path('avis_index') }}">Revenir à la liste</a>
 
-    <a href="{{ path('avis_edit', {'id': avi.id}) }}">edit</a>
+    <a href="{{ path('avis_edit', {'id': avi.id}) }}">Modifier</a>
 
     {{ include('avis/_delete_form.html.twig') }}
 {% endblock %}
