--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -78,7 +78,7 @@ $('#navigation').removeClass("fixNavigation");
         <a class="nav-link " href="{{ path('papeterie_index')}}" id="btn1">Papeterie<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " href="entretien.php" id="btn2">Produits d'entretien</a>
+        <a class="nav-link " href="{{ path('produit_index')}}" id="btn2">Produits d'entretien</a>
       </li>
       <li class="nav-item">
         <a class="nav-link " href="equipements.php" id="btn3">Equipements</a>
