--- a/templates/homepage/conditions.html.twig
+++ b/templates/homepage/conditions.html.twig
@@ -1,4 +1,4 @@
-{% include "header.html.twig" %}
+{% extends 'base.html.twig' %}
 
 {% block body %}
 <section>
@@ -74,4 +74,3 @@ Les présentes conditions de vente à distance sont soumises à la loi français
 
 </section>
 {% endblock %}
-{% include "footer.html.twig"%}
