--- a/templates/homepage/mention.html.twig
+++ b/templates/homepage/mention.html.twig
@@ -1,5 +1,5 @@
-{% include "header.html.twig" %}
-
+{% extends 'base.html.twig' %}
+{% block body %}
 <section>
 <div class="container-fluid">
     <div class="row col-md-12 justify-content-center gen">
@@ -90,4 +90,4 @@ Loi n° 2004-575 du 21 juin 2004 pour la confiance dans l’économie numérique
 
 </section>
 
-{% include "footer.html.twig" %}
+{% endblock %}
