--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -1,5 +1,5 @@
 
-{% include "header.html.twig"%}
+{% extends 'base.html.twig' %}
 
 {% block title %}{% endblock %}
 
@@ -22,4 +22,4 @@
     </div>   
     </div>
 {% endblock %}
-{% include "footer.html.twig"%}
+
