--- a/templates/avis/index.html.twig
+++ b/templates/avis/index.html.twig
@@ -1,13 +1,13 @@
+{% extends 'base.html.twig' %}
 
-{% include "header.html.twig"%}
+{% block title %}{% endblock %}
+
+{% block body %}
 <div class="container-fluid">
    <div class="row justify-content-md-center">
        <div class="col-md-12 avv row justify-content-center"><div class="col-md-3 title"></div>
     </div>
 </div>
-{% block title %}{% endblock %}
-
-{% block body %}
     
     <div class="container-fluid">
     <div class="row col-md-12 justify-content-center gen">
@@ -50,7 +50,6 @@
 
 
 {% endblock %}
-</section>
+
     
 
-{% include "footer.html.twig"%}
