--- a/templates/papeterie/index.html.twig
+++ b/templates/papeterie/index.html.twig
@@ -11,7 +11,7 @@
 </div>
 
 <section>
-<div class="container-fluid">
+<div class="container-fluid ">
     <div class="row col-md-12 justify-content-center gen">
     <div class="col-md-8 gen">
    <br> <h1>Papeterie</h1>
@@ -58,6 +58,9 @@
     </table>
 
     <a href="{{ path('papeterie_new') }}">Créer un nouveau article</a>
+     </div>
+    </div>
+</div>
 {% endblock %}
 
 
