--- a/templates/avis/edit.html.twig
+++ b/templates/avis/edit.html.twig
@@ -3,6 +3,14 @@
 {% block title %}Modifier les Avis{% endblock %}
 
 {% block body %}
+<div class="container-fluid">
+   <div class="row justify-content-md-center">
+       <div class="col-md-12 avv row justify-content-center"><div class="col-md-3 title"></div>
+    </div>
+</div>
+<div class="container-fluid">
+    <div class="row col-md-12 justify-content-center gen">
+    <div class="col-md-8 gen">
     <h1>Modifier les Avis</h1>
 
     {{ include('avis/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
@@ -10,4 +18,7 @@
     <a href="{{ path('avis_index') }}">revenir à la liste</a>
 
     {{ include('avis/_delete_form.html.twig') }}
+    </div>
+    </div>
+</div>
 {% endblock %}
