--- a/templates/avis/new.html.twig
+++ b/templates/avis/new.html.twig
@@ -3,9 +3,21 @@
 {% block title %}Nouveau commentaire{% endblock %}
 
 {% block body %}
+<div class="container-fluid">
+   <div class="row justify-content-md-center">
+       <div class="col-md-12 avv row justify-content-center"><div class="col-md-3 title"></div>
+    </div>
+</div>
+<div class="container-fluid">
+    <div class="row col-md-12 justify-content-center gen">
+    <div class="col-md-8 gen">
+    <br>
     <h1>Créer un nouveau commentaire</h1>
 
     {{ include('avis/_form.html.twig') }}
 
     <a href="{{ path('avis_index') }}">revenir à la liste</a>
+     </div>
+    </div>
+</div>
 {% endblock %}
