--- a/templates/avis/show.html.twig
+++ b/templates/avis/show.html.twig
@@ -3,6 +3,14 @@
 {% block title %}Avis{% endblock %}
 
 {% block body %}
+<div class="container-fluid">
+   <div class="row justify-content-md-center">
+       <div class="col-md-12 avv row justify-content-center"><div class="col-md-3 title"></div>
+    </div>
+</div>
+<div class="container-fluid">
+    <div class="row col-md-12 justify-content-center gen">
+    <div class="col-md-8 gen">
     <h1>Avis</h1>
 
     <table class="table">
@@ -31,4 +39,7 @@
     <a href="{{ path('avis_edit', {'id': avi.id}) }}">Modifier</a>
 
     {{ include('avis/_delete_form.html.twig') }}
+    </div>
+    </div>
+</div>
 {% endblock %}
