--- a/templates/papeterie/edit.html.twig
+++ b/templates/papeterie/edit.html.twig
@@ -3,6 +3,16 @@
 {% block title %}Modifier Papeterie{% endblock %}
 
 {% block body %}
+<div class="container-fluid">
+   <div class="row justify-content-md-center">
+       <div class="col-md-12 papt row justify-content-center"><div class="col-md-3 title"></div>
+    </div>
+</div>
+<div class="container-fluid">
+    <div class="row col-md-12 justify-content-center gen">
+    <div class="col-md-8 gen">
+    <br>
+
     <h1>Modifier Papeterie</h1>
 
     {{ include('papeterie/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
@@ -10,4 +20,7 @@
     <a href="{{ path('papeterie_index') }}">revenir à la liste</a>
 
     {{ include('papeterie/_delete_form.html.twig') }}
+     </div>
+    </div>
+</div>
 {% endblock %}
