--- a/templates/papeterie/show.html.twig
+++ b/templates/papeterie/show.html.twig
@@ -3,6 +3,15 @@
 {% block title %}Papeterie{% endblock %}
 
 {% block body %}
+<div class="container-fluid">
+   <div class="row justify-content-md-center">
+       <div class="col-md-12 papt row justify-content-center"><div class="col-md-3 title"></div>
+    </div>
+</div>
+<div class="container-fluid">
+    <div class="row col-md-12 justify-content-center gen">
+    <div class="col-md-8 gen">
+    <br>
     <h1>Papeterie</h1>
 
     <table class="table">
@@ -47,4 +56,7 @@
     <a href="{{ path('papeterie_edit', {'id': papeterie.id}) }}">modifier</a>
 
     {{ include('papeterie/_delete_form.html.twig') }}
+     </div>
+    </div>
+</div>
 {% endblock %}
