--- a/templates/entretien/index.html.twig
+++ b/templates/entretien/index.html.twig
@@ -3,6 +3,18 @@
 {% block title %}Equipements{% endblock %}
 
 {% block body %}
+<div class="container-fluid">
+   <div class="row justify-content-md-center">
+       <div class="col-md-12 equip row justify-content-center"><div class="col-md-3 title">
+
+       </div>
+    </div>
+</div>
+
+<section>
+<div class="container-fluid">
+    <div class="row col-md-12 justify-content-center gen">
+    <div class="col-md-8 gen">
     <h1>Equipements</h1>
 
     <table class="table">
@@ -44,4 +56,7 @@
     </table>
 
     <a href="{{ path('entretien_new') }}">Créer un nouveau article</a>
+    </div>   
+    </div>   
+    </div> 
 {% endblock %}
