--- a/templates/entretien/new.html.twig
+++ b/templates/entretien/new.html.twig
@@ -3,9 +3,24 @@
 {% block title %}Créer un article{% endblock %}
 
 {% block body %}
+<div class="container-fluid">
+   <div class="row justify-content-md-center">
+       <div class="col-md-12 equip row justify-content-center"><div class="col-md-3 title">
+
+       </div>
+    </div>
+</div>
+
+<section>
+<div class="container-fluid">
+    <div class="row col-md-12 justify-content-center gen">
+    <div class="col-md-8 gen">
     <h1>Créer un article</h1>
 
     {{ include('entretien/_form.html.twig') }}
 
     <a href="{{ path('entretien_index') }}">revenir à la liste</a>
+    </div>   
+    </div>   
+    </div> 
 {% endblock %}
