--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -78,16 +78,16 @@ $('#navigation').removeClass("fixNavigation");
         <a class="nav-link " href="{{ path('papeterie_index')}}" id="btn1">Papeterie<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " href="entretien.php" id="btn2">Produits d'entretien</a>
+        <a class="nav-link " href="{{ path('produit_index')}}" id="btn2">Produits d'entretien</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " href="equipements.php" id="btn3">Equipements</a>
+        <a class="nav-link " href="{{ path('entretien_index')}}" id="btn3">Equipements</a>
       </li>
       <li class="nav-item">
         <a class="nav-link " href="{{ path('propos')}}" id="btn4">A propos</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link " href="contact.php" id="btn5">Contact</a>
+        <a class="nav-link " href="{{ path('contact')}}" id="btn5">Contact</a>
       </li>
       <li class="nav-item">
         <a class="nav-link " href="{{ path('avis_index')}}" id="btn5">avis</a>
