--- a/templates/contact/contact.html.twig
+++ b/templates/contact/contact.html.twig
@@ -1,6 +1,17 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+<div class="container-fluid">
+   <div class="row justify-content-md-center">
+       <div class="col-md-12 cont row justify-content-center"><div class="col-md-3 title"></div>
+    </div>
+</div>
+
+<section>
+<div class="container-fluid">
+    <div class="row col-md-12 justify-content-center gen">
+    <div class="col-md-8 gen">
+    
 <h1 style="text-align: center"> Nous contacter en cas de besoin </h1>
 
 
@@ -27,4 +38,7 @@
             </div>
             {{ form_end(form) }}
     </div>
+    </div>   
+    </div>   
+    </div> 
 {% endblock %}
