--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -3,6 +3,16 @@
 {% block title %}Hello ContactController!{% endblock %}
 
 {% block body %}
+<div class="container-fluid">
+   <div class="row justify-content-md-center">
+       <div class="col-md-12 cont row justify-content-center"><div class="col-md-3 title"></div>
+    </div>
+</div>
+
+<section>
+<div class="container-fluid">
+    <div class="row col-md-12 justify-content-center gen">
+    <div class="col-md-8 gen">
 <style>
     .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
@@ -17,4 +27,8 @@
         <li>Your template at <code><a href="{{ 'C:/xampp/htdocs/Green_Force/templates/contact/index.html.twig'|file_link(0) }}">templates/contact/index.html.twig</a></code></li>
     </ul>
 </div>
+</div>
+    </div>   
+    </div>   
+    </div> 
 {% endblock %}
