--- a/templates/entretien/edit.html.twig
+++ b/templates/entretien/edit.html.twig
@@ -3,6 +3,18 @@
 {% block title %}Modifier Equipements{% endblock %}
 
 {% block body %}
+<div class="container-fluid">
+   <div class="row justify-content-md-center">
+       <div class="col-md-12 equip row justify-content-center"><div class="col-md-3 title">
+
+       </div>
+    </div>
+</div>
+
+<section>
+<div class="container-fluid">
+    <div class="row col-md-12 justify-content-center gen">
+    <div class="col-md-8 gen">
     <h1>Modifier Equipements</h1>
 
     {{ include('entretien/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
@@ -10,4 +22,7 @@
     <a href="{{ path('entretien_index') }}">revenir à la liste</a>
 
     {{ include('entretien/_delete_form.html.twig') }}
+    </div>   
+    </div>   
+    </div> 
 {% endblock %}
