--- a/templates/produit/edit.html.twig
+++ b/templates/produit/edit.html.twig
@@ -3,6 +3,17 @@
 {% block title %}Modifier l'article{% endblock %}
 
 {% block body %}
+ <div class="container-fluid">
+   <div class="row justify-content-md-center">
+       <div class="col-md-12 entr row justify-content-center"><div class="col-md-3 title">
+ </div>
+    </div>
+</div>
+
+<section>
+<div class="container-fluid">
+    <div class="row col-md-12 justify-content-center gen">
+    <div class="col-md-8 gen">
     <h1></h1>
 
     {{ include('produit/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
@@ -10,4 +21,7 @@
     <a href="{{ path('produit_index') }}">Revenir à la liste</a>
 
     {{ include('produit/_delete_form.html.twig') }}
+    </div>   
+    </div>   
+    </div>
 {% endblock %}
