--- a/templates/produit/new.html.twig
+++ b/templates/produit/new.html.twig
@@ -3,9 +3,23 @@
 {% block title %}Nouveau Article{% endblock %}
 
 {% block body %}
+<div class="container-fluid">
+   <div class="row justify-content-md-center">
+       <div class="col-md-12 entr row justify-content-center"><div class="col-md-3 title">
+ </div>
+    </div>
+</div>
+
+<section>
+<div class="container-fluid">
+    <div class="row col-md-12 justify-content-center gen">
+    <div class="col-md-8 gen">
     <h1>Nouveau Article</h1>
 
     {{ include('produit/_form.html.twig') }}
 
     <a href="{{ path('produit_index') }}">Revenir à la liste</a>
+    </div>   
+    </div>   
+    </div> 
 {% endblock %}
