--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -108,7 +108,11 @@ $('#navigation').removeClass("fixNavigation");
     
     
 
-
+        {% for flash in app.session.flashBag.get('notice') %}
+            <div id="notice" class="success alert alert-success">
+                {{ flash }}
+            </div>
+        {% endfor %}
 
     {% block body %}
     
