--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,6 +17,7 @@
                 <button>
                     <a href="{{ path('security_logout') }}">Deconnexion !</a>
                 </button>
+            {% endif %}
             {% block body %}{% endblock %}
         </div>
     </body>
