--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -102,12 +102,7 @@ $('#navigation').removeClass("fixNavigation");
 </div>
 </div>
     </header>
-    <div class="container-fluid">
-    <div class="row col-md-12 justify-content-center gen">
-    <div class="col-md-8 gen">
     
-    
-
         {% for flash in app.session.flashBag.get('notice') %}
             <div id="notice" class="success alert alert-success">
                 {{ flash }}
@@ -117,7 +112,7 @@ $('#navigation').removeClass("fixNavigation");
 
     {% block body %}
      
-    {% endblock %}>
+    {% endblock %}
   <footer>
 <div class="container-fluid">
     <div class="row justify-content-md-center">
