--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -117,8 +117,8 @@ $('#navigation').removeClass("fixNavigation");
      
     {% endblock %}
   <footer>
-<div class="container-fluid">
-    <div class="row justify-content-md-center">
+
+    <div class="row justify-content-md-center navbar-light bg-light">
         <div class="col-md-3 fat1">
             <p><h3>Nos conditions</h3></p><br>
            <a href="{{ path('conditions')}}" class="dln"><p>CONDITIONS GENERALES DE VENTE</p></a>
