--- a/public/css/styleheader.css
+++ b/public/css/styleheader.css
@@ -5,6 +5,45 @@
     /* Mise en forme */
     width: 100%; /* <-- Largeur de votre site */
     }
+.part
+{
+    border: 1px solid black;
+
+}
+
+.nav-pers{margin-left: 80px}
+
+a.bouton_banniere {
+    background-image: url(../img/icon-user-a.png);
+    background-size: cover;
+    width: 60px;
+    height:60px;
+    transition:0.5s}
+a.bouton_banniere:hover {
+    background-image: url(../img/icon-user-b.png);
+    background-size: cover;
+    width: 70px;
+    height:70px;
+    
+}
+a.bouton_banniere1 {
+    background-image: url(../img/caddie.png);
+    background-size: cover;
+    width: 60px;
+    height:60px;
+    transition:0.5s}
+a.bouton_banniere1:hover {
+    background-image: url(../img/caddie-b.png);
+    background-size: cover;
+    width: 70px;
+    height:70px;
+    
+}
+
+.col-md-2 {
+ 
+    display: flex;
+    justify-content: center;}
 .herd
 {
     background-color: black;
@@ -18,6 +57,7 @@
     height: 40vh;
     background-image: url(../img/papeterie.jpg);
     background-size: cover;
+    width: ;
 }
 .entr
 {
@@ -65,7 +105,7 @@ font-family: Apple Chancery, cursive;
 }
 .taille
 {
-    font-size: 1.5em;
+    font-size: 1.3em;
     justify-content: end;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     
