--- a/templates/commande/index.html.twig
+++ b/templates/commande/index.html.twig
@@ -3,7 +3,9 @@
 {% block title %}Commande index{% endblock %}
 
 {% block body %}
+<div class="bg-light p-3">
     <h1>Commande index</h1>
+</div>
 
     <table class="table">
         <thead>
@@ -31,6 +33,8 @@
                 <td>
                     <a href="{{ path('commande_show', {'id': commande.id}) }}">show</a>
                     <a href="{{ path('commande_edit', {'id': commande.id}) }}">edit</a>
+                    {# <a href="{{path('commande_remove', { 'id' : commande.id})}}" class="btn btn-danger btn-sm"></a> #}
+                        <i class="fas fa-trash"></i>
                 </td>
             </tr>
         {% else %}
@@ -39,7 +43,10 @@
             </tr>
         {% endfor %}
         </tbody>
+       
     </table>
+
+
 
     <a href="{{ path('commande_new') }}">Create new</a>
 {% endblock %}
