--- a/templates/commande/show.html.twig
+++ b/templates/commande/show.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Commande{% endblock %}
 
 {% block body %}
-    <h1>Commande</h1>
+    <h1>Détails du Produit</h1>
 
     <table class="table">
         <tbody>
