--- a/templates/entretien/index.html.twig
+++ b/templates/entretien/index.html.twig
@@ -46,6 +46,8 @@
                 <td>
                     <a href="{{ path('entretien_show', {'id': entretien.id}) }}">Voir</a>
                     <a href="{{ path('entretien_edit', {'id': entretien.id}) }}">Modifier</a>
+                     <a href="{{ path('cart_add', {'id': entretien.id}) }}">
+                    <i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
                 </td>
             </tr>
         {% else %}
