--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,3 +10,12 @@ section
 }
 .textf
 {font-family: Apple Chancery, cursive;}
+.imgdex
+{
+height: auto;
+width: auto;
+}
+.carcv
+{
+    color: #4fa626;
+}
