--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -105,7 +105,7 @@ $('#navigation').removeClass("fixNavigation");
    </a>
      </nav>
       <nav class="navbar navbar-light bg-light">
-  <a class="navbar-brand nav-pers" href="/Green_Force/public/index.php">
+  <a class="navbar-brand nav-pers" href="">
     <a class="bouton_banniere1" href="web_banniere.php"></a>
   </a>
      </nav>
@@ -142,8 +142,21 @@ $('#navigation').removeClass("fixNavigation");
         </div>
         <div class="col-md-3 fat3">
         <p><h3>Suivez Nous !</h3></p>
-        <a href=""><img src="{{asset('img/logo.png')}}" alt="" class="imglogo"></a>
-        </div>
+         <div class="row">
+      <div class="col-md-4 test"><a class="bouton_fac" href="web_banniere.php"></a></div>
+      <div class="col-md-4 test"><a class="boutontwit" href="web_banniere.php"></a></div>
+      <div class="col-md-4 test"><a class="bouton_inst" href="web_banniere.php"></a></div>
+   <div>
+     </nav>
+     
+  
+  
+    
+    
+   
+     
+        
+        
     </div>
 </div>
 
