--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -13,11 +13,18 @@
 <section>
 <div class="container-fluid">
     <div class="row col-md-12 justify-content-center gen">
-    <div class="col-md-8 gen">
+    <div class="col-md-7 gen">
     
-    <br><h1>index</h1>
-
-
+    
+<p class="textf"><br><h1>Green Force</h1><P><p class="textf"> 
+<strong class="carcv">Green Force </strong> propose des produits écologiques et biodégradables pour les entreprises qui veulent participer à la préservation de l’environnement et agissant en faveur de l’écologie.</p><br> 
+<p class="textf">
+Notre répertoire de produits vous propose une gamme en pafaite symbiose avec la nature utilisant des produits naturels français utiles à la lutte contre les pollutions.</p><br> 
+<p class="textf">
+Notre société écologique <strong class="carcv"> Green Force </strong> répertorie des acteurs engagés pour l’environnement : lutte contre la pollution et recyclage, énergies renouvelables, éco-protection, informations et solidarité, actions éco-citoyennes ou encore la création de produits biologiques.</p><br>
+<p class="textf">
+ Trouver une société engagée en faveur de la préservation environnementale est très facile sur <strong class="carcv"> Green Force </strong>, nous souhaitons pouvoir travailler dans le respect de l'environnement et vous invitons à devenir un grand acteur fessant partie de la mise en place de la sauvegarde de notre belle Planet en utilisant des produits écologiques au sein de votre vie active.</p>
+<img src="{{asset('img/green-force-empreinte-ecologique.jpg')}}" alt="" class="imgdex">
 </div>   
     </div>   
     </div>
