--- a/public/css/stylefooter.css
+++ b/public/css/stylefooter.css
@@ -1,14 +1,14 @@
 
 .fat1
 {
-   height: auto;
+   height: 25vh;
     font-family: Apple Chancery, cursive;
     }
 .fat2
 {
     
     
-    height: auto;
+    height: 25vh;
     font-family: Apple Chancery, cursive;
     text-align: center;    
 }
@@ -16,7 +16,7 @@
 {
     
     
-    height: auto;
+    height: 25vh;
     font-family: Apple Chancery, cursive;
     text-align: center;    
 }
@@ -44,62 +44,46 @@ h3
 .bouton_fac {
     background-image: url(../img/facebooka.png);
     background-size: cover;
-    width: 70px;
-    height:70px;
+    width: 100px;
+    height:100px;
     transition:0.5s;
 display: block;}
 a.bouton_fac:hover {
     background-image: url(../img/facebookb.png);
     background-size: cover;
-    width: 70px;
-    height:70px;
+    width: 100px;
+    height:100px;
     
 }
 a.boutontwit {
     background-image: url(../img/Twittera.png);
     background-size: cover;
-    width: 90px;
-    height:70px;
+    width: 120px;
+    height:100px;
     transition:0.5s;
     display: block;}
 a.boutontwit:hover {
     background-image: url(../img/Twitterb.png);
     background-size: cover;
-    width: 90px;
-    height:70px;
+    width: 120px;
+    height:100px;
     
 }
 a.bouton_inst {
     background-image: url(../img/instagrama.png);
     background-size: cover;
-    width: 90px;
-    height:90px;
+    width: 100px;
+    height:100px;
     transition:0.5s;
     display: block;}
 a.bouton_inst:hover {
     background-image: url(../img/instagramb.png);
     background-size: cover;
-    width: 90px;
-    height:90px;
+    width: 100px;
+    height:100px;
     
 }
-@media(max-width: 1150px)
-{
-    .fat3{
-        display: none;
-    }
-
-    .papt{
-  width: 100%;
-    }
-}
-@media(max-width: 1000px)
-{
-    .fat2{
-        display: none;
-    }
-
-    .papt{
-  width: 100%;
-    }
+.test{
+    height: 16vh;
+    border: 1px solid black;
 }
