--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     
     
-   
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script
    src="https://code.jquery.com/jquery-3.4.1.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
@@ -26,7 +25,7 @@ var cadi1='#btn7'
 
 $(bouton1).mouseenter(function(){
     $(this).css({
-        "font-size":"1.3em",
+        "font-size":"1.2em",
         "color": "#4fa727",
         "transition":"0.5s",
         
@@ -34,7 +33,7 @@ $(bouton1).mouseenter(function(){
 });
 $(bouton1).mouseleave(function(){
     $(this).css({
-        "font-size":"1.1em",
+        "font-size":"1em",
         "color":"#7c7c7d",
         
     });
@@ -65,12 +64,9 @@ $('#navigation').removeClass("fixNavigation");
 
 </script>
 <body>
-
-
     <header id='navigation'>
-    
         
-    <nav class="navbar navbar-expand-xl navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <nav class="navbar navbar-light bg-light">
   <a class="navbar-brand" href="/Green_Force/public/index.php">
     <img src="{{asset('img/logo/logo.png')}}" width="100" height="80" class="d-inline-block align-top" alt="">
@@ -102,28 +98,24 @@ $('#navigation').removeClass("fixNavigation");
       <li class="nav-item">
         <a class="nav-link " href="{{ path('avis_index')}}" id="btn5">Avis</a>
       </li>
-      
+      </ul>
       <nav class="navbar navbar-light bg-light">
-  <li class="nav-item">
-    <a class="nav-link bouton_banniere" href="web_banniere.php"></a>
-      
-     </li>
+  <a class="navbar-brand nav-pers" href="">
+    <a class="bouton_banniere" href="web_banniere.php"></a>
+   </a>
      </nav>
       <nav class="navbar navbar-light bg-light">
-  <li class="nav-item">
-    <a class="nav-link bouton_banniere1" href="web_banniere.php"></a>
-     
-     </li>
+  <a class="navbar-brand nav-pers" href="">
+    <a class="bouton_banniere1" href="web_banniere.php"></a>
+  </a>
      </nav>
-     </ul>
   </div>
 </nav>
 
-
-
-         
+</div>
+</div>
+</div>
     </header>
-         
     
         {% for flash in app.session.flashBag.get('notice') %}
             <div id="notice" class="success alert alert-success">
@@ -151,19 +143,28 @@ $('#navigation').removeClass("fixNavigation");
         <div class="col-md-3 fat3">
         <p><h3>Suivez Nous !</h3></p>
          <div class="row">
-      <div class="col-md-4 test"><a class="bouton_fac"  target="blank"href="web_banniere.php"></a></div>
-      <div class="col-md-4 test"><a class="boutontwit"  target="blank" href="https://twitter.com/JohnSmi69142161"></a></div>
-      <div class="col-md-4 test"><a class="bouton_inst" target="blank" href="https://www.instagram.com/green_force_4_you/
-"></a></div>
-          </div>
-        </div>
+      <div class="col-md-4 test"><a class="bouton_fac" href="web_banniere.php"></a></div>
+      <div class="col-md-4 test"><a class="boutontwit" href="web_banniere.php"></a></div>
+      <div class="col-md-4 test"><a class="bouton_inst" href="web_banniere.php"></a></div>
+   <div>
+     </nav>
+     
+  
+  
+    
+    
+   
+     
+        
+        
     </div>
+</div>
+
 </footer>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </div>
-
 </body>
 </html>
 
